--- a/main.css
+++ b/main.css
@@ -1,126 +1,4 @@
 *, body {
   font-size: 16px;
-  font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif', 'Noto Sans', sans-serif;
+  /* font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif', 'Noto Sans', sans-serif; */
 }
-
-.song-common-layout {
-  padding: 20px;
-  background-color: rgba(23,23,23, 1);
-  color: white;
-  padding-bottom: 200px;
-}
-
-.song-common-page {
-  width: 1196px;
-  margin: 0 auto;
-}
-
-.song-item {
-  display: flex;
-  margin-bottom: 20px;
-  border-top: 1px solid #333;
-  padding: 10px 0;
-  margin: 0 auto;
-  text-align: center;
-}
-
-.song-item > button {
-  height: 40px;
-  padding-top: 20px;
-}
-.soundfactory-song-info {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  width: 200px;
-}
-
-.song-cover {
-  width: 82px;
-  height: 82px;
-  margin-right: 50px;
-}
-
-.text-container {
-  width: 150px;
-  display: flex;
-  flex-wrap: wrap;
-  text-align: start;
-}
-
-.text-container > a {
-  width: 322px;
-  color: white;
-  text-decoration: none;
-}
-
-.text-container > span {
-    display: flex;
-    
-}
-
-.waveform-custom {
-  margin-left: 150px;
-}
-.waveform-container {
-  width: 500px;
-  z-index: 1;
-  padding-top: 10px;
-}
-
-.play-button {
-  padding: 10px 20px;
-  background-color: #4CAF50;
-  color: white;
-  border: none;
-  cursor: pointer;
-}
-
-.play-button:hover {
-  background-color: #45a049;
-}
-
-.pagination {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 20px;
-}
-
-.pagination button {
-  width: 30px;
-  height: 30px;
-  margin: 0 5px;
-  border-radius: 100%;
-  border: none;
-  background-color: #333;
-  color: #888;
-}
-
-.pagination .active {
-  font-weight: bold;
-  text-decoration: underline;
-  border: none;
-  color: white;
-  background-color: orange;
-  text-decoration: none;
-}
-
-.button-custom {
-  border: none;
-  color: white;
-  border-radius: 25px;
-  background-color: transparent;
-  font-size: 30px;
-}
-
-.soundfactory-song-info-text {
-  display: flex;
-  align-items: center;
-}
-
-.time-info {
-    min-width: 150px;
-    display: flex;
-}
-
